src/engine/horizon/src/render_post/tests/err-unused-ref-2/expected.stderr
[31merror:[0m unused ref
   ╭─[ <unknown>:5:2 ]
   │
 5 │ <ref>
   │  ─┬─  
   │   ╰─── unused ref
───╯

compilation failed
